# asap_o_matic

./: .gitignore  .pdm-python  CHANGELOG.md  Cargo.toml  README.md  mypy.ini  pyproject.toml
python/asap_o_matic/: __init__.py  __main__.py  logger.py
src/: lib.rs
src/asap_o_matic/: __init__.py  __main__.py  logger.py
test/data1/: Untitled.ipynb
test/data2/: test2_S1_L003_R1_001.fastq.gz.gzi  test2_S1_L003_R2_001.fastq.gz.fai  test2_S1_L003_R2_001.fastq.gz.gzi  test2_S1_L003_R3_001.fastq.gz.fai  test2_S1_L003_R3_001.fastq.gz.gzi
tests/: test_asap_to_kite.py  test_parse.py  test_verify.py
