[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asap-o-matic"
version = "1.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "typer ==0.9.0",
    "loguru ==0.7.2",
    "multiprocess ==0.70.15",
    "rich ==13.6.0",
    "fastq ==2.0.2",
    "revseq @ git+https://github.com/milescsmith/revseq",
    "more-itertools",
]

[project.urls]
repository = "https://github.com/milescsmith/asap-o-matic"
homepage = "https://github.com/milescsmith/asap-o-matic"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
asap-o-matic = "asap_o_matic.__main__:app"

[project.optional-dependencies]
dev = [
    "black ==23.10.0",
    "ruff ==0.1.0",
    "mypy ==1.6.1",
]

[tool.black]
line-length = 120
target-version = ["py310"]
skip-string-normalization = true

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "I001",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "B027",
    "C901",
    "D100",
    "D103",
    "D205",
    "D212",
    "D415",
    "E203",
    "E501",
    "FBT003",
    "N802",
    "N803",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "S105",
    "S106",
    "S107",
]
unfixable = [
    "F401",
    "UP007",
]
exclude = [
    ".git",
    ".hg",
    "__pycache__",
    "_bin/*",
    "_build/*",
    "_ig_fbcode_wheel/*",
    "buck-out/*",
    "third-party-buck/*",
    "third-party2/*",
    "dist",
    ".venv",
    ".nox",
    ".mypy_cache",
    ".pytype",
    ".svn",
    "__pypackages__",
]
src = ["src"]

[tool.ruff.mccabe]
max-complexity = 50

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.isort]
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80