[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "asap-o-matic"
version = "2.2.0"
description = "Rearrange ASAP-seq antibody reads into something Alevin can recognize and count."
authors = [
    { name = "Miles Smith", email = "miles-smith@omrf.org" }
]
requires-python = ">=3.10"
license = { text = "GPL-3.0" }
readme = "README.md"
dependencies = [
    "typer>=0.12.3",
    "loguru>=0.7.2",
    "multiprocess>=0.70.16",
    "rich>=13.7.1",
    "fastq>=2.0.4",
    "revseq>=1.2.0",
    "tqdm>=4.66.4",
    "miniFasta>=3.0.3",
    "joblib>=1.4.2",
    "pysam>=0.22.1",
]
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]

[project.urls]
repository = "https://github.com/milescsmith/asap_o_matic"
homepage = "https://github.com/milescsmith/asap_o_matic"

[project.scripts]
asap-o-matic = "asap_o_matic.__main__:app"

[tool.maturin]
features = ["pyo3/extension-module"]
profile = "release"
manifest-path = "Cargo.toml"
frozen = false
locked = false
config = []
unstable-flags = []
rustc-args = []
bindings = "pyo3"
python-source = "python"
sdist-generator = "cargo"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.5",
    "mypy>=1.11.0",
    "nox>=2024.4.15",
    "pytest>=8.3.2",
    "pre-commit>=3.7.1",
    "pytest-xdist[psutil]>=3.6.1",
    "pip>=24.1.2",
    "coverage>=7.6.0",
    "pytest-random-order>=1.1.1",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]